--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -247,7 +247,7 @@
 
 .page__meta {
   margin-top: 2em;
-  color: $muted-text-color;
+  color: $black;
   font-family: $sans-serif;
   font-size: $type-size-6;
 
