--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -81,7 +81,8 @@
   /* paragraph indents */
   p {
     margin: 0 0 $indent-var;
-
+    font-size: 0.8em;
+    
     /* sibling indentation*/
     @if $paragraph-indent == true {
       & + p {
